<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_btn">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management">Employee Management</string>
    <string name="title_function_1">Function 1</string>
    <string name="title_function_2">Function 2</string>
    <string name="title_function_3">Function 3</string>
    <string name="title_function_4">Function 4</string>
    <string name="title_function_5">Function 5</string>
    <string name="title_function_6">Function 6</string>
    <string name="title_function_7">Function 7</string>
    <string name="title_function_8">Function 8</string>
    <string name="title_function_9">Function 9</string>
</resources>