<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeManagementActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/title_employee_management"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- ScrollView chứa nội dung cuộn được -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TableRow 1 -->
            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_1" />

                    <TextView
                        android:id="@+id/txtFunction1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_1"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_2" />

                    <TextView
                        android:id="@+id/txtFunction2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_2"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_3" />

                    <TextView
                        android:id="@+id/txtFunction3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_3"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_4" />

                    <TextView
                        android:id="@+id/txtFunction4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_4"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_5" />

                    <TextView
                        android:id="@+id/txtFunction5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_5"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_6" />

                    <TextView
                        android:id="@+id/txtFunction6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_6"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />

                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_7" />

                    <TextView
                        android:id="@+id/txtFunction7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_7"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_8" />

                    <TextView
                        android:id="@+id/txtFunction8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_8"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFunction9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_func_9" />

                    <TextView
                        android:id="@+id/txtFunction9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_function_9"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>
